strukturiranje koda
