# backend/public/swagger.json
@@ -1101,7 +1101,9 @@
 						}
 					}
 				}
-			},
+			}
+		},
+		"/users/id/{id}": {
 			"get": {
 				"operationId": "GetUserById",
 				"responses": {
