# backend/src/routes/user.router.ts
@@ -5,6 +5,7 @@ import auth from "../middlewares/isAuth";
 import { upload } from "../middlewares/upload";
 import cloudinary from '../config/cloudinary';
 import { IPicturePayload } from "../repositories/picture.repository";
+import { userToUserInfo } from "../mappers/userInfo.mapper";
 
 const router = express.Router();
 
@@ -20,11 +21,12 @@ router.post("/", auth([1, 2, 3]), async (req, res) => {
   return res.send(response);
 });
 
-router.get("/:id", auth([1, 2, 3]), async (req, res) => {
+router.get("/id/:id",  async (req, res) => {
   const controller = new UserController();
   const response = await controller.getUserById(req.params.id);
   if (!response) res.status(404).send({ message: "No user found" });
-  return res.send(response);
+  const userInfo = await userToUserInfo(response!);
+  return res.send(userInfo);
 });
 
 router.get("/email/:email", auth([1, 2, 3]), async (req, res) => {
